--- a/client/parties/views/party-details.ng.html
+++ b/client/parties/views/party-details.ng.html
@@ -2,7 +2,16 @@ Party number is: {{ ctrl.partyId }} . Here you will see and change the details o
 
 <input ng-model="ctrl.party.name">
 <input ng-model="ctrl.party.description">
+<label>Is public</label>
+<input type="checkbox" ng-model="party.public">
 	
 <button ng-click="ctrl.save()">Save</button>
 <button ng-click="ctrl.reset()">Reset form</button>
 <button><a ui-sref="parties">Cancel</a></button>
+	
+<ul>
+	Users:
+	<li ng-repeat="user in ctrl.users">
+		<div>{{ user.emails[0].address }}</div>
+	</li>
+</ul>
