--- a/client/parties/views/parties-list.ng.html
+++ b/client/parties/views/parties-list.ng.html
@@ -21,6 +21,12 @@
 			<option value="-1">Descending</option>
 		</select>
 	</div>
+	<div class="angular-google-map-container">
+		<ui-gmap-google-map center="ctrl.map.center" zoom="ctrl.map.zoom">
+			<ui-gmap-markers models="ctrl.parties" coords="'location'" click="onClicked()" fit="true" idkey="'_id'" doRebuildAll="true">
+			</ui-gmap-markers>
+		</ui-gmap-google-map>
+	</div>
 	<ul>
 		<li dir-paginate="party in ctrl.parties | itemsPerPage: ctrl.perPage" total-items="ctrl.partiesCount.count">
 <!--		<li dir-paginate="party in ctrl.parties | itemsPerPage: ctrl.perPage" total-items="10">-->
