--- a/client/parties/style/parties.css
+++ b/client/parties/style/parties.css
@@ -1,4 +1,7 @@
-.angular-google-map-container {
-  height: 400px;
-  width: 400px;
-}
+ body {
+   background-color: rgba(0, 0, 0, 0.04);
+ }
+ 
+ .navbar {
+   background-color: #ffffff;
+ }
