--- a/client/parties/views/party-details.ng.html
+++ b/client/parties/views/party-details.ng.html
@@ -1,33 +1,48 @@
-Party number is: {{ ctrl.partyId }} . Here you will see and change the details of the party:
+Party number is: {{ ctrl.partyId }} .
 
-<input ng-model="ctrl.party.name" ng-disabled="ctrl.party.owner!=$root.currentUser._id">
-<input ng-model="ctrl.party.description" ng-disabled="ctrl.party.owner!=$root.currentUser._id">
-<label>Is public</label>
-<input type="checkbox" ng-model="party.public" ng-disabled="ctrl.party.owner!=$root.currentUser._id">
+<legend>
+  Here you will see and change the details of the party:
+</legend>
+
+<form layout="column">
+	<md-input-container>
+		<label>Party Name</label>
+		<input ng-model="ctrl.party.name" ng-disabled="ctrl.party.owner!=$root.currentUser._id" type="text" aria-label="Name">
+	</md-input-container>
+	<md-input-container>
+		<label></label>
+		<input ng-model="ctrl.party.description" ng-disabled="ctrl.party.owner!=$root.currentUser._id" type="text" aria-label="Description">
+	</md-input-container>
+	<md-checkbox ng-model="party.public" ng-disabled="ctrl.party.owner!=$root.currentUser._id" aria-label="Public">
+		Is public
+	</md-checkbox>
+
+	<div layout="row" layout-align="left">
+		<md-button ng-click="ctrl.save()">Save</md-button>
+		<md-button ng-click="ctrl.reset()">Reset form</md-button>
+		<md-button ng-href="/parties">Cancel</md-button>
+	</div>
 	
-<button ng-click="ctrl.save()">Save</button>
-<button ng-click="ctrl.reset()">Reset form</button>
-<button><a ui-sref="parties">Cancel</a></button>
+	<md-list ng-show="ctrl.canInvite()">
+	    <md-subheader class="md-no-sticky">Users to invite:</md-subheader>
+		<md-list-item ng-repeat="user in ctrl.users | uninvited:ctrl.party">
+			<div>{{ user | displayName }}</div>
+			<md-button ng-click="ctrl.invite(user)">Invite</md-button>
+		</md-list-item>
+		<md-list-item ng-if="(ctrl.users | uninvited:ctrl.party).length <= 0">Everyone is invited!</md-list-item>
+	</md-list>
+	
+	<md-list>
+	    <md-subheader class="md-no-sticky">All Users:</md-subheader>
+		<md-list-item ng-repeat="user in ctrl.users">
+			<div>{{ user.emails[0].address }}</div>
+		</md-list-item>
+	</md-list>
 
-<ul ng-show="ctrl.canInvite()">
-	Users to invite:
-	<li ng-repeat="user in ctrl.users | uninvited:ctrl.party">
-		<div>{{ user | displayName }}</div>
-		<button ng-click="ctrl.invite(user)">Invite</button>
-	</li>
-	<li ng-if="(ctrl.users | uninvited:ctrl.party).length <= 0">Everyone is invited!</li>
-</ul>
-<ul>
-	Users:
-	<li ng-repeat="user in ctrl.users">
-		<div>{{ user.emails[0].address }}</div>
-	</li>
-</ul>
-<div class="party-details-maps">
   <div class="angular-google-map-container">
     <ui-gmap-google-map center="ctrl.map.center" events="ctrl.map.events" zoom="ctrl.map.zoom">
 		<ui-gmap-marker coords="ctrl.party.location" options="ctrl.map.marker.options" events="ctrl.map.marker.events" idkey="ctrl.party._id">
 		</ui-gmap-marker>
     </ui-gmap-google-map>
   </div>
-</div>
+</form>
