--- a/client/parties/views/parties-list.ng.html
+++ b/client/parties/views/parties-list.ng.html
@@ -38,7 +38,7 @@
 				</md-select>
 			</md-input-container>
 		</form>
-		<div class="angular-google-map-container">
+		<div class="my-google-maps angular-google-map-container">
 			<ui-gmap-google-map center="ctrl.map.center" zoom="ctrl.map.zoom">
 				<ui-gmap-markers models="ctrl.parties" coords="'location'" click="onClicked()" fit="true" idkey="'_id'" doRebuildAll="true">
 				</ui-gmap-markers>
@@ -46,52 +46,56 @@
 		</div>
 	</div>
 	<div layout="column" layout-padding>
-		<div dir-paginate="party in ctrl.parties | itemsPerPage: ctrl.perPage" total-items="ctrl.partiesCount.count" layout="column">
-			<div layout="row">
-       			<div flex="80">	
-					   <h2><a ui-sref="partyDetails({partyId: party._id})">{{party.name}}</a></h2>
-					   <p>{{party.description}}</p>
-				 </div>
-				 <span flex></span>
-				 <md-button ng-click="ctrl.removeParty(party)" ng-show="$root.currentUser && $root.currentUser._id == party.owner">
-				 	<md-icon md-svg-icon="content:ic_clear_24px"></md-icon>
-				 </md-button>
-			</div>
-			<div ng-show="$root.currentUser" layout="row">
-				<md-button ng-click="ctrl.rsvp(party._id, 'yes')">I'm going!</md-button>
-				<md-button ng-click="ctrl.rsvp(party._id, 'maybe')">Maybe</md-button>
-				<md-button ng-click="ctrl.rsvp(party._id, 'no')">No</md-button>
-			</div>
-			<div ng-if="party.public">Everyone is invited!</div>
-			<div ng-hide="$root.currentUser">
-				<i>Sign in to RSVP for this party!</i>
-			</div>
-			
-			<div>
-				<strong>Who is coming?</strong>
+		<md-card dir-paginate="party in ctrl.parties | itemsPerPage: ctrl.perPage" total-items="ctrl.partiesCount.count" layout="column">
+			<md-card-content>
+				<div layout="row">
+	       			<div flex="80">	
+						   <h2><a ui-sref="partyDetails({partyId: party._id})">{{party.name}}</a></h2>
+						   <p>{{party.description}}</p>
+					 </div>
+					 <span flex></span>
+					 <md-button ng-click="ctrl.removeParty(party)" ng-show="$root.currentUser && $root.currentUser._id == party.owner">
+					 	<md-icon md-svg-icon="content:ic_clear_24px"></md-icon>
+					 </md-button>
+				</div>
+				<div ng-show="$root.currentUser" layout="row">
+					<md-button ng-click="ctrl.rsvp(party._id, 'yes')">I'm going!</md-button>
+					<md-button ng-click="ctrl.rsvp(party._id, 'maybe')">Maybe</md-button>
+					<md-button ng-click="ctrl.rsvp(party._id, 'no')">No</md-button>
+				</div>
+				<div ng-if="party.public">Everyone is invited!</div>
+				<div ng-hide="$root.currentUser">
+					<i>Sign in to RSVP for this party!</i>
+				</div>
+				
 				<div>
-					Yes - {{ (party.rsvps | filter:{rsvp: 'yes'}).length }}
-					Maybe - {{ (party.rsvps | filter:{rsvp: 'maybe'}).length }}
-					No - {{ (party.rsvps | filter:{rsvp: 'no'}).length }}
+					<strong>Who is coming?</strong>
+					<div>
+						Yes - {{ (party.rsvps | filter:{rsvp: 'yes'}).length }}
+						Maybe - {{ (party.rsvps | filter:{rsvp: 'maybe'}).length }}
+						No - {{ (party.rsvps | filter:{rsvp: 'no'}).length }}
+					</div>
+					<div ng-repeat="rsvp in party.rsvps | filter:{rsvp: 'yes'}">
+						{{ ctrl.getUserById(rsvp.user) | displayName }} - {{ rsvp.rsvp }}
+					</div>
+					<div ng-repeat="rsvp in party.rsvps | filter:{rsvp: 'maybe'}">
+						{{ ctrl.getUserById(rsvp.user) | displayName }} - {{ rsvp.rsvp }}
+					</div>
+					<div ng-repeat="rsvp in party.rsvps | filter:{rsvp: 'no'}">
+						{{ ctrl.getUserById(rsvp.user) | displayName }} - {{ rsvp.rsvp }}
+					</div>
 				</div>
-				<div ng-repeat="rsvp in party.rsvps | filter:{rsvp: 'yes'}">
-					{{ ctrl.getUserById(rsvp.user) | displayName }} - {{ rsvp.rsvp }}
-				</div>
-				<div ng-repeat="rsvp in party.rsvps | filter:{rsvp: 'maybe'}">
-					{{ ctrl.getUserById(rsvp.user) | displayName }} - {{ rsvp.rsvp }}
-				</div>
-				<div ng-repeat="rsvp in party.rsvps | filter:{rsvp: 'no'}">
-					{{ ctrl.getUserById(rsvp.user) | displayName }} - {{ rsvp.rsvp }}
-				</div>
-			</div>
-			<md-list ng-if="!party.public">
-				Users who have not responded:
-				<md-list-item ng-repeat="invitedUser in ctrl.outstandingInvitations(party)">
-					{{ invitedUser | displayName }}
-				</md-list-item>
-			</md-list>
-			<p><small>Posted by {{ ctrl.creator(party) | displayName }}</small></p>
-		</div>
+				<md-list ng-if="!party.public">
+					Users who have not responded:
+					<md-list-item ng-repeat="invitedUser in ctrl.outstandingInvitations(party)" class="md-1-line">
+						<div class="md-list-item-text">
+							<p>{{ invitedUser | displayName }}</p>
+						</div>
+					</md-list-item>
+				</md-list>
+				<p><small>Posted by {{ ctrl.creator(party) | displayName }}</small></p>
+			</md-card-content>
+		</md-card>
 	</div>
 	<dir-pagination-controls on-page-change="ctrl.pageChanged(newPageNumber)"></dir-pagination-controls>
 </md-content>
