--- a/client/parties/views/parties-list.ng.html
+++ b/client/parties/views/parties-list.ng.html
@@ -42,7 +42,7 @@
 			<md-card-content>
 				<div layout="column" layout-align="center center">
 					<h3>Parties' Locations</h3>
-					<leaflet id="testMap" controls="controls" height="400px" width="600px"></leaflet>
+					<leaflet id="testMap" height="400px" width="600px"></leaflet>
 <!--					<div class="angular-google-map-container">
 						<ui-gmap-google-map center="ctrl.map.center" zoom="ctrl.map.zoom">
 							<ui-gmap-markers models="ctrl.parties" coords="'location'" click="onClicked()" fit="true" idkey="'_id'" doRebuildAll="true">
